crates/picus/tests/ui/no_internal_action_handlers.stderr
error[E0432]: unresolved imports `picus::events::WidgetUiAction`, `picus::events::dispatch_ui_actions`, `picus::overlay::OverlayUiAction`, `picus::overlay::handle_overlay_actions`
 --> tests/ui/no_internal_action_handlers.rs:3:14
  |
3 |     events::{WidgetUiAction, dispatch_ui_actions},
  |              ^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^ no `dispatch_ui_actions` in `events`
  |              |
  |              no `WidgetUiAction` in `events`
4 |     overlay::{OverlayUiAction, handle_overlay_actions},
  |               ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^ no `handle_overlay_actions` in `overlay`
  |               |
  |               no `OverlayUiAction` in `overlay`
