crates/picus/tests/ui/no_internal_action_handlers.rs
//! Internal action payloads and queue consumers are not facade APIs.
use picus::{
    events::{WidgetUiAction, dispatch_ui_actions},
    overlay::{OverlayUiAction, handle_overlay_actions},
};

fn main() {}
